# nba-fantasy-tracker

./: .gitignore  CLAUDE.md  MIGRATION.sql  README.md  SETUP.md
backend/: app.py  nba-api.ipynb  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline.py  0002_add_auth_picks_notifications.py  0003_nullable_pick_player_id.py  0004_add_refresh_sessions.py
backend/auth/: config.py  dependencies.py  router.py  schemas.py  security.py  service.py  sessions.py
backend/core/: rate_limit.py
backend/devices/: router.py  schemas.py  service.py
backend/ingestion/: email.py  injuries.py  injuries_nba.py
backend/ml/data/: features.py
backend/ml/models/: predictor.py
backend/ml/notebooks/: exploration.ipynb
backend/ml/training/: train.py
backend/models/: __init__.py  database.py
backend/notifications/: notifier.py
backend/picks/: dependencies.py  router.py  schemas.py  service.py
backend/players/: router.py  service.py
backend/routers/: players.py  snapshot.py
backend/scripts/: create_user.py  daily_update.py  populate_db.py  send_test_notification.py
backend/services/: __init__.py  fantasy.py  injuries.py  injuries_nba.py
backend/snapshot/: router.py
backend/tests/: conftest.py
backend/tests/auth/: test_auth.py  test_sessions.py
backend/tests/core/: test_fantasy.py
backend/tests/devices/: test_devices.py
backend/tests/notifications/: test_notifier.py
backend/tests/picks/: test_picks.py
backend/tests/services/: test_fantasy.py
frontend/: package.json  pnpm-lock.yaml
frontend/app/: page.tsx  (+1 more)
(+50 files in other folders)
