[project]
name = "nba-fantasy-tracker-backend"
version = "0.1.0"
description = "Backend API for Fantasy player tracking"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "nba-api>=1.5.2",
    "pydantic>=2.10.0",
    "httpx>=0.28.0",
    "lightgbm (>=4.6.0,<5.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "joblib (>=1.5.3,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "pdfplumber (>=0.11.9,<0.12.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "resend (>=2.30.1,<3.0.0)",
    "python-multipart (>=0.0.29,<0.0.30)",
    "pyjwt (>=2.13.0,<3.0.0)",
    "pwdlib[argon2] (>=0.3.0,<0.4.0)",
    "slowapi (>=0.1.9,<0.2.0)",
    "redis (>=5.0.0,<8.0.0)",
]

[tool.poetry]
name = "nba-fantasy-tracker-backend"
version = "0.1.0"
description = "Backend API for Fantasy player tracking"
authors = ["Thomas"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
nba-api = "^1.5.2"
pydantic = "^2.10.0"
httpx = "^0.28.0"

[dependency-groups]
dev = [
    "nbstripout (>=0.9.1,<0.10.0)",
    "pytest (>=8.3.0,<9.0.0)"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
